--- a/root/usr/share/rpcd/acl.d/luci-app-sakurafrp.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-sakurafrp.json
@@ -1,6 +1,6 @@
 {
-	"luci-app-services-sakurafrp": {
-		"description": "Grant UCI access for luci-app-services-sakurafrp",
+	"luci-app-sakurafrp": {
+		"description": "Grant UCI access for luci-app-sakurafrp",
 		"read": {
 			"uci": [ "sakurafrp" ]
 		},
